ACCUMULO-4046 Modernize 1.7 branch
* Favor built-ins over Guava
* Avoid boxing constructors
* Make arg check methods static imports for readability/consistency and to ease
  future migrations, if necessary.